css: counter style

--- a/style.css
+++ b/style.css
@@ -14,3 +14,9 @@ body {
     justify-content: center;
     background: #18181b;
 }
+
+#counter {
+    background-color: #262626;
+    padding: 2rem;
+    border-radius: 8px;
+}
