--- a/style.css
+++ b/style.css
@@ -20,3 +20,10 @@ body {
     padding: 2rem;
     border-radius: 8px;
 }
+
+#value {
+    font-size: 8rem;
+    color: #fff;
+    min-width: 14rem;
+    text-align: center;
+}
