--- a/style.css
+++ b/style.css
@@ -27,3 +27,15 @@ body {
     min-width: 14rem;
     text-align: center;
 }
+
+button {
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+button:hover {
+    opacity: .8;
+}
