--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ button {
     color: #fff;
     font-weight: 500;
     cursor: pointer;
+    transition: opacity .3s;
 }
 
 button:hover {
@@ -50,4 +51,18 @@ button:hover {
     height: 6rem;
     font-size: 3rem;
     background-color: #18181b;
+    margin-right: 1rem;
+}
+
+.count-button:last-child {
+    margin-right: 0rem;
+    margin-left: 1rem;
+}
+
+#reset {
+    width: 100%;
+    font-size: 1.8rem;
+    background-color: #3730a3;
+    padding: .8rem;
+    margin-top: 1rem;
 }
